--- a/src/pages/confirmar/confirmar.css
+++ b/src/pages/confirmar/confirmar.css
@@ -158,3 +158,12 @@
   justify-content: center;
   margin-top: 2rem;
 }
+
+.Confirmar button img {
+  width: 8%;
+  margin-right: 0.4rem;
+}
+
+.Confirmar .lime {
+  background-color: #e8ffe3;
+}
